# hadolint

./: .dockerignore  .gitignore  .gitmodules  .hadolint.yaml  .hindent.yaml  .pre-commit-hooks.yaml  .remarkrc.yaml  .travis.yml  AGENTS.md  Analyzer.hs  CNAME  Dockerfile  Formatter.hs  LICENSE  Lexer.hs  Main.hs  Makefile  Messages.hs  Parser.hs  README.md  Rules.hs  Syntax.hs  Test.hs  Tests.hs  ThirdPartyNotices.txt  appveyor.yml  cabal.project  cabal.project.freeze  default.nix  devenv.nix  hadolint.cabal  hie.yaml  index.html  index.md  integration_test.sh  package.yaml  pyproject.toml  release.nix  stack.yaml  test.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  docker.yml  ghcr.io.yml  haskell.yml  hlint.yml  linux.yml  markdown.yml  nix.yml  pull_request.yml  pull_resquest.yml  release.yml  thirdparty.yaml
_includes/: actions.html  contributors.html  footer.html  github_corner.html  google_analytics.html  head.html  header.html
_layouts/: default.html  page.html  start.html
_sass/: _base.scss  _layout.scss  _modules.scss
app/: Main.hs  Server.hs  embedded.hs
contrib/: hadolint.json
css/: stylesheet.css
docker/: .remarkrc.yaml  Dockerfile  Dockerfile-debian-slim  README.md
docker/debian-slim/: Dockerfile
docker/hooks/: build  push
docs/: INTEGRATION.md  RELEASE.md
js/: editor.js  hadolint.js
nix/: pkgs.nix  sources.json  sources.nix
scripts/: fetch_version.sh
src/: Analyzer.hs  Bash.hs  Formatter.hs  Hadolint.hs  JavaScriptApi.hs  Lexer.hs  Main.hs  Normalize.hs  Parser.hs  Rules.hs  Server.hs  Syntax.hs  Test.hs
src/Hadolint/: Bash.hs  Config.hs  Format.hs  Formatter.hs  Ignore.hs  Lexer.hs  Lint.hs  Meta.hs  Normalize.hs  Parser.hs  Pragma.hs  Process.hs  Rule.hs  Rules.hs  Rules.hs.orig  Shell.hs  Syntax.hs  Test.hs  Utils.hs
src/Hadolint/Config/: Commandline.hs  Configfile.hs  Configuration.hs  Environment.hs
src/Hadolint/Formatter/: Checkstyle.hs  Codacy.hs  Codeclimate.hs  Format.hs  Gnu.hs  JUnit.hs  Json.hs  Sarif.hs  SonarQube.hs  TTY.hs
src/Hadolint/Rule/: DL1001.hs  DL3000.hs  DL3001.hs  DL3002.hs  DL3003.hs  DL3004.hs  DL3005.hs  DL3006.hs  DL3007.hs  DL3008.hs  DL3009.hs  DL3010.hs  DL3011.hs  DL3012.hs  DL3013.hs  DL3014.hs  DL3015.hs  DL3016.hs  DL3017.hs  DL3018.hs  DL3019.hs  DL3020.hs  DL3021.hs  DL3022.hs  DL3023.hs  DL3024.hs  DL3025.hs  DL3026.hs  DL3027.hs  DL3028.hs  DL3029.hs  DL3030.hs  DL3031.hs  DL3032.hs  DL3033.hs  DL3034.hs  DL3035.hs  DL3036.hs  DL3037.hs  DL3038.hs  (+36 more)
test/: ConfigSpec.hs  DL3000.hs  DL3001.hs  DL3002.hs  DL3003.hs  DL3004.hs  DL3005.hs  DL3006.hs  DL3007.hs  DL3008.hs  DL3009.hs  DL3010.hs  DL3011.hs  DL3012.hs  DL3013.hs  DL3014.hs  DL3015.hs  DL3016.hs  DL3017.hs  DL3018.hs  DL3019.hs  DL3020.hs  DL3021.hs  DL3022.hs  DL3023.hs  DL3024.hs  DL3025.hs  DL3026.hs  DL3027.hs  DL3028.hs  DL3029.hs  DL3030.hs  DL3031.hs  DL3032.hs  DL3033.hs  DL3034.hs  DL3035.hs  DL3036.hs  DL3037.hs  DL3038.hs  (+34 more)
test/Hadolint/: PragmaSpec.hs  ShellSpec.hs
test/Hadolint/Config/: CommandlineSpec.hs  ConfigfileSpec.hs  ConfigurationSpec.hs  EnvironmentSpec.hs  SpecHook.hs
test/Hadolint/Formatter/: GnuSpec.hs  JUnitSpec.hs  ParseErrorSpec.hs  SarifSpec.hs  SonarQubeSpec.hs  TTYSpec.hs
test/Hadolint/Rule/: DL1001Spec.hs  DL3000Spec.hs  DL3001Spec.hs  DL3002Spec.hs  DL3003Spec.hs  DL3004Spec.hs  DL3005Spec.hs  DL3006Spec.hs  DL3007Spec.hs  DL3008Spec.hs  DL3009Spec.hs  DL3010Spec.hs  DL3011Spec.hs  DL3012Spec.hs  DL3013Spec.hs  DL3014Spec.hs  DL3015Spec.hs  DL3016Spec.hs  DL3018Spec.hs  DL3019Spec.hs  DL3020Spec.hs  DL3021Spec.hs  DL3022Spec.hs  DL3023Spec.hs  DL3024Spec.hs  DL3025Spec.hs  DL3026Spec.hs  DL3027Spec.hs  DL3028Spec.hs  DL3029Spec.hs  DL3030Spec.hs  DL3032Spec.hs  DL3033Spec.hs  DL3034Spec.hs  DL3035Spec.hs  DL3036Spec.hs  DL3037Spec.hs  DL3038Spec.hs  DL3040Spec.hs  DL3041Spec.hs  (+33 more)
website/: index.html
website/_sass/: _base.scss
website/css/: stylesheet.css  stylesheet.scss
website/fonts/: audimat-regular-webfont.eot
website/js/: hadolint.mjs
