name:                hadolint
version:             1.2.4
synopsis:            Dockerfile Linter JavaScript API
homepage:            https://github.com/hadolint/hadolint
license:             GPL-3
license-file:        LICENSE
author:              Lukas Martinelli
maintainer:          me@lukasmartinelli.ch
copyright:           Lukas Martinelli
description:         A smarter Dockerfile linter that helps you build best practice Docker images.
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hadolint.Bash
                     , Hadolint.Formatter
                     , Hadolint.Rules
  build-depends:       base >=4.8 && < 5
                     , parsec >=3.1
                     , bytestring >=0.10
                     , split >= 0.2
                     , language-docker >= 1.0.0
                     , ShellCheck >= 0.4.7
  default-language:    Haskell2010

executable hadolint
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >=4.8 && < 5
                     , hadolint
                     , language-docker >= 1.0.0
                     , parsec >=3.1
                     , optparse-applicative <=0.14.0.0
                     , gitrev >= 1.3.1
  default-language:    Haskell2010
  -- OS X does not support static build https://developer.apple.com/library/content/qa/qa1118
  if !os(OSX)
    ld-options:        -static -pthread

test-suite hadolint-unit-tests
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base >=4.8 && < 5
                     , parsec >=3.1
                     , bytestring >=0.10
                     , split >= 0.2
                     , language-docker >= 1.0.0
                     , ShellCheck >= 0.4.7
                     , HUnit >= 1.2
                     , hspec
                     , hadolint
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@github.com:hadolint/hadolint.git
